Update NumberUtils.java